tests/result/fail/types/function.fail.cpp
#include "tim/result/Result.hpp"


int main() { tim::Result<void(), int> r; }
